AG-3390 - Changelog prevent more content gradient overlaping collapseble header

--- a/grid-packages/ag-grid-docs/documentation/src/components/release-notes/Collapsible.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/release-notes/Collapsible.module.scss
@@ -48,6 +48,7 @@
     border-right: $border;
     border-bottom: $border;
     border-left: $border;
+    overflow: hidden;
 
     &:not(.notExpandable) > div {
         overflow: hidden;
